darbs/style.scss
body {
	background: #f8f8f8;
	color: #1a1a1a;
	font: 400 16px/1.5 "Helvetica Neue", "Helvetica", "Arial", sans-serif;
	margin: 0 auto;
	padding: 50px 25px;
	max-width: 720px;

	@media (prefers-color-scheme: dark) {
		background: #1a1a1a;
		color: #f8f8f8;
	}
}

header {
	display: flex;
	position: relative;
	align-items: center;

	h1 {
		font-size: 2em;
		font-weight: 700;
		line-height: 1.2;
		margin: 0 auto 0 35px;
		&:before {
			content: '🚀';
			display: block;
			position: absolute;
			left: -10px;
		}
	}

	a {
		font-weight: 700;
		&:before {
			content: '📄';
			display: inline-block;
			margin-right: 5px;
			text-decoration: none;
		}
	}
}

section {
	position: relative;
	padding: 0 0 0 35px;
	margin: 55px 0;
	min-height: 1px;

	&:before {
		content: '';
		display: block;
		position: absolute;
		top: -26px;
		left: 0;
		bottom: -26px;
		width: 10px;
		overflow: hidden;
		border-radius: 2px;
	}

	$gradient-0: rgba(#1a7bff, 0); // Start from transparent version of the 1st color
	$gradient-1: #1a7bff;
	$gradient-2: #05e5ff;
	$gradient-3: #c1ff48;
	$gradient-4: #fff000;
	$gradient-5: #ff640a;
	$gradient-6: #f40b32;
	$gradient-7: #ce0049;
	$gradient-8: #7851a9;

	&:nth-of-type(1):before { background-image: linear-gradient($gradient-8, $gradient-7) }
	&:nth-of-type(2):before { background-image: linear-gradient($gradient-7, $gradient-6) }
	&:nth-of-type(3):before { background-image: linear-gradient($gradient-6, $gradient-5) }
	&:nth-of-type(4):before { background-image: linear-gradient($gradient-5, $gradient-4) }
	&:nth-of-type(5):before { background-image: linear-gradient($gradient-4, $gradient-3) }
	&:nth-of-type(6):before { background-image: linear-gradient($gradient-3, $gradient-2) }
	&:nth-of-type(7):before { background-image: linear-gradient($gradient-2, $gradient-1) }
	&:nth-of-type(8):before { background-image: linear-gradient($gradient-1, $gradient-0) }

	&:first-of-type {
		&:before {
			border-top-left-radius: 0px;
			border-top-right-radius: 0px;
			top: -18px;
		}
		&:after {
			content: '';
			display: block;
			position: absolute;
			top: -28px;
			left: 0;
			width: 0;
			height: 0;
			border-style: solid;
			border-width: 0 5px 10px 5px;
			border-color: transparent transparent $gradient-8 transparent;
		}
	}

	& > h1 {
		position: absolute;
		transform: rotate(-90deg);
		transform-origin: bottom left;
		bottom: 0;
		left: 0;
		margin: 0;
		font-size: inherit;
		font-weight: 500;
	}


	& > .present {
		position: absolute;
		transform: rotate(-90deg);
		transform-origin: bottom left;
		top: 32px;
		left: 0;
		margin: 0;
		font-size: inherit;
		font-weight: 500;
	}
}

article {
	position: relative;

	& + article {
		margin-top: 30px;
	}

	h1 {
		margin: 0;
		font-size: 1.4em;
		font-weight: 500;
		line-height: 1.2;
	}

	h2 {
		font-size: .8em;
		font-weight: 700;
		line-height: 1.5;
		margin: 0;
		padding: 10px 0 12px;
		color: #555;

		@media (prefers-color-scheme: dark) {
			color: lighten(#555, 33%);
		}

		& > a,
		& > span {
			margin-right: 10px;
			white-space: nowrap;
		}

		a:hover span { text-decoration: underline; }
	}

	.what:before {
		content: '🏢';
		margin-right: 5px;
	}

	.where {
		font-weight: 500;
		&:before {
			content: '📍';
			margin-right: 5px;
		}
	}

	p {
		margin: 0;
	}

	p + p {
		margin-top: .5em;
	}

	em {
		font-style: italic;
	}

	ul {
		margin: 1em 0 0 20px;
		padding-left: 0;
		font-weight: 700;
		list-style: disc outside;

		strong + span {
			font-weight: 400;
		}
	}

	li {
		margin: .3em 0;
	}
}

a {
	color: #05c;
	text-decoration: none;

	@media (prefers-color-scheme: dark) {
		color: lighten(#05c, 20%);
	}

	&:focus,
	&:hover {
		text-decoration: underline;
	}

	&:visited {
		color: #795ebb;

		@media (prefers-color-scheme: dark) {
			color: lighten(#795ebb, 20%);
		}
	}
}

